--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1{
     margin-top: 10px;
     font-weight: 40px;
 }
-.carcasaFrontal{
+.parteFrontal{
   position: relative;
   margin: auto;
   width:300px;
