he hecho un hover a la pantalla para que se vea street fighter

--- a/css/style.css
+++ b/css/style.css
@@ -158,3 +158,9 @@ span{
     border-radius: 100%;
     background-color:rgba(255, 235, 205, 0.637);
 }
+.pantalla:hover{
+    background-image:url(/img/SSFII_title_screen.gif) ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
