--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1{
   margin: auto;
   width:300px;
   height: 500px;
-  background-image: url("/img/backgroud\ red.JPG");
+  background-image: url("../img/backgroud\ red.jpg");
   border: 10px solid darkred;
   border-top-left-radius: 50px;
   border-top-right-radius: 15px;
@@ -50,7 +50,7 @@ h1{
     width: 240px;
     height: 210px;
     background-color: black;
-    border-right:solid 10px  #283747;
+    border-right:solid 10px  #283747  ;
     margin-top: 20px;
     margin-left: 20px;
     position: relative;
@@ -72,33 +72,33 @@ h1{
     margin-left: 20px;
     width: 100px;
     height: 100px;
-    background-image: url("/img/Flechas.JPG");
+    background-image: url("../img/Flechas.jpg");
     background-size: contain;
     display: flex;
    }
 
-.uno{ background-image: url("/img/backgroud\ red.JPG");}
-.tres{ background-image: url("/img/backgroud\ red.JPG");}
-.siete{background-image: url("/img/backgroud\ red.JPG");}
-.nueve{background-image: url("/img/backgroud\ red.JPG");}
-#cinco{background-image: url("/img/backgroud\ red.JPG");}
+.uno{ background-image: url("../img/backgroud\ red.jpg");}
+.tres{ background-image: url("../img/backgroud\ red.jpg");}
+.siete{background-image: url("../img/backgroud\ red.jpg");}
+.nueve{background-image: url("../img/backgroud\ red.jpg");}
+#cinco{background-image: url("../img/backgroud\ red.jpg");}
 
 #dos{ 
-    background-image: url("/img/BOTON\ X.JPG");
+    background-image: url("../img/BOTON\ X.jpg");
     background-size: cover;
 }
 
 #cuatro{ 
     background-size: cover;
-    background-image: url("/img/BOTON\ Y.JPG");
+    background-image: url("../img/BOTON\ Y.jpg");
 }
 #seis{
     background-size: cover;
-    background-image: url("/img/boton\ A.JPG");
+    background-image: url("../img/boton\ A.jpg");
 }
 #ocho{
     background-size: cover;
-    background-image: url("/img/boton\ B.JPG");
+    background-image: url("../img/boton\ B.jpg");
 }
 
 .botones{
@@ -107,7 +107,7 @@ h1{
     margin-left: 180px;
     width: 100px;
     height: 100px;
-    background-image: url("/img/backgroud\ red.JPG");
+    background-image: url("../img/backgroud\ red.jpg");
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;}
 .botones div{
@@ -122,7 +122,7 @@ h1{
     width: 105px;
     height: 50px;
     border-radius: 10px;
-    background-image: url("/img/Select\ and\ start.JPG");
+    background-image: url("../img/Select\ and\ start.jpg");
     background-size: contain;
     
 }
@@ -132,7 +132,7 @@ h1{
     margin-left: 120px;
     width: 45px;
     height: 45px;
-    background-image: url("/img/boton\ Reset.JPG");
+    background-image: url("../img/boton\ Reset.jpg");
     background-size: cover;
 }
 
@@ -140,7 +140,7 @@ h1{
     position: absolute;
     width: 80px;
     height: 80px;
-    background-image: url("/img/Rejillas\ del\ audio.JPG");
+    background-image: url("../img/Rejillas\ del\ audio.jpg");
     background-size: auto;
     margin-top: 400px;
     margin-left: 200px;
@@ -188,7 +188,7 @@ span{
     background-color:rgba(63, 62, 61, 0.637);
 }
 .pantalla:hover{
-    background-image:url("/img/SSFII_title_screen.GIF") ;
+    background-image:url("../img/SSFII_title_screen.gif") ;
     background-size: cover;
     background-repeat: no-repeat;
     
